Fixed visual issues when high contrast mode enabled.

--- a/src/scripts/OSFramework/OSUI/Pattern/DropdownServerSideItem/scss/_dropdownserversideitem.scss
+++ b/src/scripts/OSFramework/OSUI/Pattern/DropdownServerSideItem/scss/_dropdownserversideitem.scss
@@ -77,7 +77,6 @@
 		&:hover,
 		&:focus {
 			outline: none;
-			font-weight: var(--font-semi-bold);
 
 			&::before {
 				border: 2px solid var(--color-focus-outer);
